Revert "new chnages updated"
This reverts commit 78018804a823cd40df4f39f9a50983bb73199127.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,4 @@ hjdgfjdsgfds
 dsjhfjdsgfkds
 hjdsfjdsgfhdsgf
 fhdjfsdjfdjsgfhdsf
-hfdhsfkdsfjkdsgfdsgjfd
-dhsgfsdghfdsfdsfdshfgshdgfhdsgf
-fdsjfsdhgfhdsgfhsdgfhsdghfdsjfgdshfgds
-fdshfdsgfhdsgfhdsgfhdsgfhdsgfhdsghfgdshfgdshs
+hfdhsfkdsfjkdsgfdsgjfds
